--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,2 @@
 add_library(stochastic_simulation_lib STATIC agent.cpp)
-add_executable(main main.cpp)
-target_link_libraries(main PRIVATE stochastic_simulation_lib)
+target_include_directories(stochastic_simulation_lib PUBLIC ../include)
