Can plot different simulations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 include(sanitizers.cmake)
-include(doctest.cmake)
+include(libcoro.cmake)
 
 enable_testing()
 
