Added test and custom targets for clang-format and cppcheck

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-include(matplotplusplus.cmake)
+include("../../CMakeScripts/matplotplusplus.cmake")
+include("../../CMakeScripts/libcoro.cmake")
 
 add_library(stochastic_simulation_lib STATIC "agent.cpp" "expr.cpp" "intrinsic.cpp" "reaction_rule.cpp")
 target_include_directories(stochastic_simulation_lib PUBLIC "../include")
