--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,17 @@
-include(doctest.cmake)
+include("../CMakeScripts/doctest.cmake")
 
-add_executable(agent_test "agent_test.cpp")
-target_link_libraries(agent_test PRIVATE doctest::doctest_with_main stochastic_simulation_lib)
-add_test(NAME agent_test COMMAND agent_test)
+function(add_doctest test_name test_source)
+    add_executable(${test_name} ${test_source})
+    target_link_libraries(${test_name} PRIVATE doctest::doctest_with_main stochastic_simulation_lib)
+    add_test(NAME ${test_name} COMMAND ${test_name})
+endfunction()
+
+
+add_doctest(agent_test "agent_test.cpp")
+add_doctest(expr_test "expr_test.cpp")
+add_doctest(intrinsic_test "intrinsic_test.cpp")
+add_doctest(network_graph_printer_test "network_graph_printer_test.cpp")
+add_doctest(pretty_printer_test "pretty_printer_test.cpp")
+add_doctest(reaction_rule_test "reaction_rule_test.cpp")
+add_doctest(symbol_table_test "symbol_table_test.cpp")
+add_doctest(vessel_test "vessel_test.cpp")
