--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,15 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-include(sanitizers.cmake)
-include(libcoro.cmake)
+include("CMakeScripts/sanitizers.cmake")
+add_custom_target(fmt
+    COMMAND ${CMAKE_COMMAND} -P "${CMAKE_SOURCE_DIR}/CMakeScripts/clang-format.cmake"
+    COMMENT "Running clang-format script"
+)
+add_custom_target(check
+    COMMAND ${CMAKE_COMMAND} -P "${CMAKE_SOURCE_DIR}/CMakeScripts/cppcheck.cmake"
+    COMMENT "Running cppcheck script"
+)
 
 enable_testing()
 
